--- a/dice game/github.ipynb
+++ b/dice game/github.ipynb
@@ -10,7 +10,34 @@
      "start_time": "2025-09-17T09:56:55.526561Z"
     }
    },
-   "source": "print('hello world')\n",
+   "source": [
+    "print('hello world')\n",
+    "print('calculator using function')\n",
+    "def add(a,b):\n",
+    "     print(float(a) + float(b))\n",
+    "def sub(a,b):\n",
+    "    print(float(a) - float(b))\n",
+    "def mult(a,b):\n",
+    "    print(float(a) * float(b))\n",
+    "def div(a,b):\n",
+    "    print(float(a) / float(b))\n",
+    "def power(a,b):\n",
+    "    print(float(a) **float(b))\n",
+    "a = input('enter a number')\n",
+    "b = input('enter a second number')\n",
+    "c = input('enter a operation')\n",
+    "\n",
+    "if c=='+':\n",
+    "    add(a,b)\n",
+    "if c=='-':\n",
+    "    sub(a,b)\n",
+    "if c=='*':\n",
+    "    mult(a,b)\n",
+    "if c=='/':\n",
+    "    div(a,b)\n",
+    "if c=='**':\n",
+    "    power(a,b)\n"
+   ],
    "outputs": [
     {
      "name": "stdout",
